none: update gradle run task to use ZGC.